k8s_operations/opa/pod1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mywebapp
spec:
  replicas: 3
  selector:
    matchLabels:
      type: frontend
  template:
    metadata:
      name: nodeapp-pod
      labels:
        type: frontend
    spec:
      containers:
      - name: nodeapp
        image: navjoy220161/node-mongo:v1
        resources: {}
